Fixed some issues pointed to by SonarQube